# HPL-AI

./: AUTHORS  BUILD_AND_RUN  ChangeLog  LICENSE  NEWS  README  README.md  configure.ac  run.th2k.work.sh
include/: hpl_ai.h  hpl_ai_blas.h  hpl_ai_comm.h  hpl_ai_config.h.in  hpl_ai_grid.h  hpl_ai_panel.h  hpl_ai_pgesv.h  hpl_ai_pmatgen.h  hpl_ai_ptest.h  hpl_blas.h  hplai.h  hplai.hh  hplai_auxil.h  hplai_auxil.hh  hplai_blas.h  hplai_blas.hh  hplai_comm.h  hplai_comm.hh  hplai_config.h.in  hplai_gesv.h  hplai_gesv.hh  hplai_grid.h  hplai_grid.hh  hplai_misc.h  hplai_misc.hh  hplai_panel.h  hplai_panel.hh  hplai_pauxil.h  hplai_pauxil.hh  hplai_pfact.h  hplai_pfact.hh  hplai_pgesv.h  hplai_pgesv.hh  hplai_pmatgen.h  hplai_pmatgen.hh  hplai_ptest.h  hplai_ptest.hh
src/: HPLAI_misc.cpp  Makefile.am
src/auxil/: HPLAI_alacpy.cc  HPLAI_alacpy.cpp  HPLAI_alamch.cc  HPLAI_alamch.cpp  HPLAI_alatcpy.cc  HPLAI_alatcpy.cpp
src/blas/: HPLAI_aaxpy.cpp  HPLAI_acopy.cpp  HPLAI_agemm.cpp  HPLAI_agemv.cpp  HPLAI_ager.cpp  HPLAI_ascal.cpp  HPLAI_aswap.cpp  HPLAI_atrsm.cpp  HPLAI_atrsv.cpp  HPLAI_blas.cc  HPLAI_blas.cpp  HPLAI_iaamax.cpp  HPL_AI_aaxpy.cpp  HPL_AI_acopy.cpp  HPL_AI_agemm.cpp  HPL_AI_agemv.cpp  HPL_AI_ager.cpp  HPL_AI_ascal.cpp  HPL_AI_aswap.cpp  HPL_AI_atrsm.cpp  HPL_AI_atrsv.cpp  HPL_AI_blas.cpp  HPL_AI_iaamax.cpp  HPL_dger.c
src/comm/: HPLAI_1rinM.cc  HPLAI_1rinM.cpp  HPLAI_1ring.cc  HPLAI_1ring.cpp  HPLAI_2rinM.cc  HPLAI_2rinM.cpp  HPLAI_2ring.cc  HPLAI_2ring.cpp  HPLAI_bcast.cc  HPLAI_bcast.cpp  HPLAI_binit.cc  HPLAI_binit.cpp  HPLAI_blonM.cc  HPLAI_blonM.cpp  HPLAI_blong.cc  HPLAI_blong.cpp  HPLAI_bwait.cc  HPLAI_bwait.cpp  HPLAI_copyL.cc  HPLAI_copyL.cpp  HPLAI_packL.cc  HPLAI_packL.cpp  HPLAI_recv.cc  HPLAI_recv.cpp  HPLAI_sdrv.cc  HPLAI_sdrv.cpp  HPLAI_send.cc  HPLAI_send.cpp  HPL_AI_recv.cpp  HPL_AI_send.cpp
src/grid/: HPLAI_all_reduce_AFLOAT.cc  HPLAI_all_reduce_AFLOAT.cpp  HPLAI_all_reduce_afloat.cpp  HPLAI_broadcast_AFLOAT.cc  HPLAI_broadcast_AFLOAT.cpp  HPLAI_broadcast_afloat.cpp  HPLAI_max_AFLOAT.cc  HPLAI_max_AFLOAT.cpp  HPLAI_max_afloat.cpp  HPLAI_min_AFLOAT.cc  HPLAI_min_AFLOAT.cpp  HPLAI_reduce_AFLOAT.cc  HPLAI_reduce_AFLOAT.cpp  HPLAI_sum_AFLOAT.cc  HPLAI_sum_AFLOAT.cpp  HPLAI_sum_afloat.cpp  HPL_AI_broadcast_afloat.cpp
src/panel/: HPLAI_papanel_disp.cc  HPLAI_papanel_disp.cpp  HPLAI_papanel_free.cc  HPLAI_papanel_free.cpp  HPLAI_papanel_init.cc  HPLAI_papanel_init.cpp  HPLAI_papanel_new.cc  HPLAI_papanel_new.cpp  HPL_AI_papanel_disp.cpp  HPL_AI_papanel_free.cpp  HPL_AI_papanel_init.cpp  HPL_AI_papanel_new.cpp
src/pauxil/: HPLAI_alaswp00N.cc  HPLAI_alaswp00N.cpp  HPLAI_alaswp01N.cc  HPLAI_alaswp01N.cpp  HPLAI_alaswp01T.cc  HPLAI_alaswp01T.cpp  HPLAI_alaswp02N.cc  HPLAI_alaswp02N.cpp  HPLAI_alaswp03N.cc  HPLAI_alaswp03N.cpp  HPLAI_alaswp03T.cc  HPLAI_alaswp03T.cpp  HPLAI_alaswp04N.cc  HPLAI_alaswp04N.cpp  HPLAI_alaswp04T.cc  HPLAI_alaswp04T.cpp  HPLAI_alaswp05N.cc  HPLAI_alaswp05N.cpp  HPLAI_alaswp05T.cc  HPLAI_alaswp05T.cpp  HPLAI_alaswp06N.cc  HPLAI_alaswp06N.cpp  HPLAI_alaswp06T.cc  HPLAI_alaswp06T.cpp  HPLAI_alaswp10N.cc  HPLAI_alaswp10N.cpp  HPLAI_palamch.cc  HPLAI_palamch.cpp  HPLAI_palange.cc  HPLAI_palange.cpp
src/pfact/: HPLAI_alocmax.cc  HPLAI_alocmax.cpp  HPLAI_alocswpN.cc  HPLAI_alocswpN.cpp  HPLAI_alocswpT.cc  HPLAI_alocswpT.cpp  HPLAI_pafact.cc  HPLAI_pafact.cpp  HPLAI_pamxswp.cc  HPLAI_pamxswp.cpp  HPLAI_papancrN.cc  HPLAI_papancrN.cpp  HPLAI_papancrT.cc  HPLAI_papancrT.cpp  HPLAI_papanllN.cc  HPLAI_papanllN.cpp  HPLAI_papanllT.cc  HPLAI_papanllT.cpp  HPLAI_papanrlN.cc  HPLAI_papanrlN.cpp  HPLAI_papanrlT.cc  HPLAI_papanrlT.cpp  HPLAI_parpancrN.cc  HPLAI_parpancrN.cpp  HPLAI_parpancrT.cc  HPLAI_parpancrT.cpp  HPLAI_parpanllN.cc  HPLAI_parpanllN.cpp  HPLAI_parpanllT.cc  HPLAI_parpanllT.cpp  HPLAI_parpanrlN.cc  HPLAI_parpanrlN.cpp  HPLAI_parpanrlT.cc  HPLAI_parpanrlT.cpp
src/pgesv/: HPLAI_equil.cc  HPLAI_equil.cpp  HPLAI_pagesv.cc  HPLAI_pagesv.cpp  HPLAI_pagesv0.cc  HPLAI_pagesv0.cpp  HPLAI_pagesvK2.cc  HPLAI_pagesvK2.cpp  HPLAI_palaswp00N.cc  HPLAI_palaswp00N.cpp  HPLAI_palaswp00T.cc  HPLAI_palaswp00T.cpp  HPLAI_palaswp01N.cc  HPLAI_palaswp01N.cpp  HPLAI_palaswp01T.cc  HPLAI_palaswp01T.cpp  HPLAI_patrsv.cc  HPLAI_patrsv.cpp  HPLAI_paupdateNN.cc  HPLAI_paupdateNN.cpp  HPLAI_paupdateNT.cc  HPLAI_paupdateNT.cpp  HPLAI_paupdateTN.cc  HPLAI_paupdateTN.cpp  HPLAI_paupdateTT.cc  HPLAI_paupdateTT.cpp  HPLAI_pdgesv.cc  HPLAI_pdgesv.cpp  HPLAI_pipid.cc  HPLAI_pipid.cpp  HPLAI_plindx0.cc  HPLAI_plindx0.cpp  HPLAI_plindx1.cc  HPLAI_plindx1.cpp  HPLAI_plindx10.cc  HPLAI_plindx10.cpp  HPLAI_rollN.cc  HPLAI_rollN.cpp  HPLAI_rollT.cc  HPLAI_rollT.cpp  (+9 more)
testing/: Makefile.am
testing/pmatgen/: HPLAI_pdmatgen.cc  HPLAI_pdmatgen.cpp  HPL_AI_pdmatgen.cpp
testing/ptest/: HPLAI_pddriver.cc  HPLAI_pddriver.cpp  HPLAI_pdinfo.cc  HPLAI_pdinfo.cpp  HPLAI_pdtest.cc  HPLAI_pdtest.cpp  HPL_AI_pddriver.cpp  HPL_AI_pdinfo.cpp  HPL_AI_pdtest.cpp
